--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="row">
-      <div class="col span-1-of-4 box">
+      <div class="col span-1-of-4 box feature-text">
         <i class="icon ion-ios-pulse icon-big"></i>
         <h3>
           Up to 365 days/year
@@ -53,7 +53,7 @@
           also choose to order more flexibly if that's your style.
         </p>
       </div>
-      <div class="col span-1-of-4 box">
+      <div class="col span-1-of-4 box feature-text">
         <i class="icon ion-ios-timer icon-big"></i>
         <h3>
           Ready in 20 minutes
@@ -63,7 +63,7 @@
           also choose to order more flexibly if that's your style.
         </p>
       </div>
-      <div class="col span-1-of-4 box">
+      <div class="col span-1-of-4 box feature-text">
         <i class="icon ion-ios-color-wand icon-big"></i>
         <h3>
           100% organic
@@ -73,8 +73,8 @@
           Good for your health, the environment, and it also tastes better!
         </p>
       </div>
-      <div class="col span-1-of-4 box">
-        <i class="icon ion-ios-cart icon-big"></i>
+      <div class="col span-1-of-4 box feature-text">
+        <i class="icon ion-ios-nutrition icon-big"></i>
         <h3>
           Order anything
         </h3>
@@ -165,8 +165,88 @@
       </div>
     </div>
   </section>
+
+  <section class="section-cities">
+    <div class="row">
+      <h2>We're currently in these cities</h2>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-4 box">
+        <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
+        <h3>Lisbon</h3>
+        <div class="cities-feature">
+          <i class="icon ion-ios-person icon-small"></i>
+          1600+ happy eaters
+        </div>
+        <div class="cities-feature">
+          <i class="icon ion-ios-star-outline icon-small "></i>
+          60+ top chefs
+        </div>
+        <div class="cities-feature">
+          <i class="icon ion-logo-twitter icon-small "></i>
+          <a href="#">@omnifood_lx</a>
+        </div>
+      </div>
+
+      <div class="col span-1-of-4 box">
+        <img src="resources/img/san-francisco.jpg" alt="Lisbon">
+        <h3>
+          San Francisco
+        </h3>
+        <div class="cities-feature">
+          <i class="icon ion-ios-person icon-small"></i>
+          3700+ happy eaters
+        </div>
+        <div class="cities-feature">
+          <i class="icon ion-ios-star-outline icon-small"></i>
+          160+ top chefs
+        </div>
+        <div class="cities-feature">
+          <i class="icon ion-logo-twitter icon-small "></i>
+          <a href="#">@omnifood_sf</a>
+        </div>
+      </div>
+
+      <div class="col span-1-of-4 box">
+        <img src="resources/img/berlin.jpg" alt="Lisbon">
+        <h3>
+          Berlin
+        </h3>
+        <div class="cities-feature">
+          <i class="icon ion-ios-person icon-small"></i>
+          2300+ happy eaters
+        </div>
+        <div class="cities-feature">
+          <i class="icon ion-ios-star-outline icon-small "></i>
+          110+ top chefs
+        </div>
+        <div class="cities-feature">
+          <i class="icon ion-logo-twitter icon-small"></i>
+          <a href="#">@omnifood_berlin</a>
+        </div>
+      </div>
+
+      <div class="col span-1-of-4 box">
+        <img src="resources/img/london.jpg" alt="Lisbon">
+        <h3>
+          London
+        </h3>
+        <div class="cities-feature">
+          <i class="icon ion-ios-person icon-small"></i>
+          1200+ happy eaters
+        </div>
+        <div class="cities-feature">
+          <i class="icon ion-ios-star-outline icon-small"></i>
+          50+ top chefs
+        </div>
+        <div class="cities-feature">
+          <i class="icon ion-logo-twitter icon-small "></i>
+          <a href="#">@omnifood_london</a>
+        </div>
+      </div>
+    </div>
+
+  </section>
 </body>
 
 </html>
-
-
