--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="vendors/css/normalize.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
+  <link rel="stylesheet" href="vendors/css/animate.css">
   <link rel="stylesheet" href="resources/css/style.css">
+  <link rel="stylesheet" href="resources/css/queries.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
   <link href="https://unpkg.com/ionicons@4.4.4/dist/css/ionicons.min.css" rel="stylesheet">
   <title>OmniFood</title>
@@ -18,31 +21,35 @@
     <nav>
       <div class="row">
         <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
-        <ul class="main-nav">
-          <li><a href="#" class="">Food delivery</a></li>
-          <li><a href="#" class="">How it works</a></li>
-          <li><a href="#" class="">Our cities </a></li>
-          <li><a href="#" class="">Sign up</a></li>
+        <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
+        <ul class="main-nav js--main-nav">
+          <li><a href="#features" class="">Food delivery</a></li>
+          <li><a href="#works" class="">How it works</a></li>
+          <li><a href="#cities" class="">Our cities </a></li>
+          <li><a href="#plans" class="">Sign up</a></li>
         </ul>
+        <a class="mobile-nav-icon js--nav-icon">
+          <i class="icon ion-ios-menu"></i>
+        </a>
       </div>
     </nav>
     <div class="hero-text-box">
       <h1>Goodbye junk food. <br>Hello super healthy meals.</h1>
-      <a href="#" class="btn btn-full">I’m hungry</a>
-      <a href="#" class="btn btn-ghost">Show me more</a>
+      <a href="#" class="btn btn-full js--scroll-to-plan">I’m hungry</a>
+      <a href="#" class="btn btn-ghost js--scroll-to-start">Show me more</a>
     </div>
   </header>
 
-  <section class="section-features">
+  <section class="section-features js--section-features" id="features">
     <div class="row">
       <h2>Get food fast &mdash; not fast food</h2>
-      <p class="long-copy">
+      <p class="long-copy animated bounce">
         Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking.
         So let us take care of that, we’re really good at it, we promise!
       </p>
     </div>
 
-    <div class="row">
+    <div class="row js--wp-1">
       <div class="col span-1-of-4 box feature-text">
         <i class="icon ion-ios-pulse icon-big"></i>
         <h3>
@@ -133,11 +140,11 @@
     </ul>
   </section>
 
-  <section class="section-steps">
+  <section class="section-steps" id="works">
     <div class="row">
       <h2>How it works &mdash; Simple as 1, 2, 3</h2>
     </div>
-    <div class="row">
+    <div class="row js--wp-2">
       <div class="col span-1-of-2 steps-box">
         <img src="resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
       </div>
@@ -166,7 +173,7 @@
     </div>
   </section>
 
-  <section class="section-cities">
+  <section class="section-cities js--wp-3" id="cities">
     <div class="row">
       <h2>We're currently in these cities</h2>
     </div>
@@ -273,13 +280,13 @@
     </div>
   </section>
 
-  <section class="section-plans">
+  <section class="section-plans js--section-plans" id="plans">
     <div class="row">
       <h2>Start eating healthy today</h2>
     </div>
     <div class="row">
       <div class="col span-1-of-3">
-        <div class="plan-box">
+        <div class="plan-box js--wp-4">
           <div>
             <h3>Premium</h3>
             <p class="plan-price">399$ <span>/ month</span></p>
@@ -408,22 +415,6 @@
 
         <div class="row">
           <div class="col span-1-of-3">
-            <label for="find-us">
-              How did you find us?
-            </label>
-          </div>
-          <div class="col span-2-of-3">
-            <select name="find-us" id="find-us">
-              <option value="friends" selected>Friends</option>
-              <option value="search">Search Engine</option>
-              <option value="ad">Adertisement</option>
-              <option value="other">Other</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col span-1-of-3">
             <label>
               Newsletter
             </label>
@@ -458,9 +449,44 @@
     </div>
   </section>
 
+  <footer>
+    <div class="row">
+      <div class="col span-1-of-2">
+        <ul class="footer-nav">
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">iOS App</a></li>
+          <li><a href="#">Android App</a></li>
+        </ul>
+      </div>
+      <div class="col span-1-of-2">
+        <ul class="social">
+          <li><a href="#"><i class="icon ion-logo-googleplus icon-small"></i></a>
+          </li>
+          <li><a href="#"><i class="icon ion-logo-twitter icon-small"></i></a>
+          </li>
+          <li><a href="#"><i class="icon ion-logo-instagram icon-small"></i></a>
+          </li>
+          <li><a href="#"><i class="icon ion-logo-facebook icon-small"></i></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <p>Copyright &copy; 2018 by Omnifood. All Rights Reserved</p>
+    </div>
+  </footer>
 
 
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/html5@1.0.5/lib/index.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
+  <script src="vendors/js/jquery.waypoints.min.js"></script>
+  <script src="resources/js/script.js"></script>
 </body>
+
 
 </html>
