--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Omnifood is a premium food delivery service with the mission to bring affordable and healthy meals to as many people as possible.">
   <link rel="stylesheet" href="vendors/css/normalize.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
   <link rel="stylesheet" href="vendors/css/animate.css">
+  <link rel="stylesheet" href="vendors/css/hover.css">
   <link rel="stylesheet" href="resources/css/style.css">
   <link rel="stylesheet" href="resources/css/queries.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
   <link href="https://unpkg.com/ionicons@4.4.4/dist/css/ionicons.min.css" rel="stylesheet">
   <title>OmniFood</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="resources/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="resources/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="resources/favicons/favicon-16x16.png">
+  <link rel="manifest" href="resources/favicons/site.webmanifest">
+  <link rel="mask-icon" href="resources/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="resources/favicons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="resources/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -23,10 +34,10 @@
         <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
         <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
         <ul class="main-nav js--main-nav">
-          <li><a href="#features" class="">Food delivery</a></li>
-          <li><a href="#works" class="">How it works</a></li>
-          <li><a href="#cities" class="">Our cities </a></li>
-          <li><a href="#plans" class="">Sign up</a></li>
+          <li><a href="#features" class="hvr-bob">Food delivery</a></li>
+          <li><a href="#works" class="hvr-bob">How it works</a></li>
+          <li><a href="#cities" class="hvr-bob">Our cities </a></li>
+          <li><a href="#plans" class="hvr-bob">Sign up</a></li>
         </ul>
         <a class="mobile-nav-icon js--nav-icon">
           <i class="icon ion-ios-menu"></i>
@@ -35,8 +46,8 @@
     </nav>
     <div class="hero-text-box">
       <h1>Goodbye junk food. <br>Hello super healthy meals.</h1>
-      <a href="#" class="btn btn-full js--scroll-to-plan">I’m hungry</a>
-      <a href="#" class="btn btn-ghost js--scroll-to-start">Show me more</a>
+      <a href="#" class="btn btn-full js--scroll-to-plan hvr-bob">I’m hungry</a>
+      <a href="#" class="btn btn-ghost js--scroll-to-start hvr-bob">Show me more</a>
     </div>
   </header>
 
@@ -178,7 +189,7 @@
       <h2>We're currently in these cities</h2>
     </div>
     <div class="row">
-      <div class="col span-1-of-4 box">
+      <div class="col span-1-of-4 box hvr-float">
         <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
         <h3>Lisbon</h3>
         <div class="cities-feature">
@@ -195,7 +206,7 @@
         </div>
       </div>
 
-      <div class="col span-1-of-4 box">
+      <div class="col span-1-of-4 box hvr-float">
         <img src="resources/img/san-francisco.jpg" alt="Lisbon">
         <h3>
           San Francisco
@@ -214,7 +225,7 @@
         </div>
       </div>
 
-      <div class="col span-1-of-4 box">
+      <div class="col span-1-of-4 box hvr-float">
         <img src="resources/img/berlin.jpg" alt="Lisbon">
         <h3>
           Berlin
@@ -233,7 +244,7 @@
         </div>
       </div>
 
-      <div class="col span-1-of-4 box">
+      <div class="col span-1-of-4 box hvr-float">
         <img src="resources/img/london.jpg" alt="Lisbon">
         <h3>
           London
@@ -262,19 +273,19 @@
       <div class="col span-1-of-3">
         <blockquote>Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so
           Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
-          <cite><img src="resources/img/customer-1.jpg" alt="">Alberto Duncan</cite>
+          <cite><img src="resources/img/customer-1.jpg" alt="customer 1 photo">Alberto Duncan</cite>
         </blockquote>
       </div>
       <div class="col span-1-of-3">
         <blockquote>Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food
           delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
-          <cite><img src="resources/img/customer-2.jpg" alt="">Joana Silva</cite>
+          <cite><img src="resources/img/customer-2.jpg" alt="customer 2 photo">Joana Silva</cite>
         </blockquote>
       </div>
       <div class="col span-1-of-3">
         <blockquote>I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and
           ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
-          <cite><img src="resources/img/customer-3.jpg" alt="">Milton Chapman</cite>
+          <cite><img src="resources/img/customer-3.jpg" alt="customer 3 photo">Milton Chapman</cite>
         </blockquote>
       </div>
     </div>
@@ -285,7 +296,7 @@
       <h2>Start eating healthy today</h2>
     </div>
     <div class="row">
-      <div class="col span-1-of-3">
+      <div class="col span-1-of-3 hvr-float-shadow">
         <div class="plan-box js--wp-4">
           <div>
             <h3>Premium</h3>
@@ -315,11 +326,11 @@
             </ul>
           </div>
           <div>
-            <a href="#" class="btn btn-full">Sign up now</a>
+            <a href="#" class="btn btn-full hvr-bob">Sign up now</a>
           </div>
         </div>
       </div>
-      <div class="col span-1-of-3">
+      <div class="col span-1-of-3 hvr-float-shadow">
         <div class="plan-box">
           <div>
             <h3>Pro</h3>
@@ -349,11 +360,11 @@
             </ul>
           </div>
           <div>
-            <a href="#" class="btn btn-ghost">Sign up now</a>
+            <a href="#" class="btn btn-ghost hvr-bob">Sign up now</a>
           </div>
         </div>
       </div>
-      <div class="col span-1-of-3">
+      <div class="col span-1-of-3 hvr-float-shadow">
         <div class="plan-box">
           <div>
             <h3>Starter</h3>
@@ -382,7 +393,7 @@
             </ul>
           </div>
           <div>
-            <a href="#" class="btn btn-ghost">Sign up now</a>
+            <a href="#" class="btn btn-ghost hvr-bob">Sign up now</a>
           </div>
         </div>
       </div>
@@ -400,7 +411,7 @@
             <label for="name">Name</label>
           </div>
           <div class="col span-2-of-3">
-            <input type="text" name="name" id="name" placeholder="Your Name" required>
+            <input type="text" name="name" id="name" placeholder="Name" required>
           </div>
         </div>
 
@@ -409,7 +420,7 @@
             <label for="email">Email</label>
           </div>
           <div class="col span-2-of-3">
-            <input type="email" name="email" id="email" placeholder="Your Email" required>
+            <input type="email" name="email" id="email" placeholder="Email" required>
           </div>
         </div>
 
@@ -431,7 +442,7 @@
             </label>
           </div>
           <div class="col span-2-of-3">
-            <textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="Leave a Message"></textarea>
           </div>
         </div>
         <div class="row">
@@ -441,7 +452,7 @@
             </label>
           </div>
           <div class="col span-2-of-3">
-            <input type="submit" value="Send it!">
+            <input type="submit" value="Send it!" class="hvr-glow">
           </div>
         </div>
 
